# assess

./: .gitignore  AGENTS.md  Cargo.toml  README.md  operator.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/: PLAN_ASSESS.md
fixtures/artifacts/: benchmark_low.json  rvl_refusal_diffuse.json  rvl_refusal_missingness_tolerable.json
fixtures/golden/: block.json  escalate.json  proceed.json  proceed_with_risk.json
fixtures/policies/: loan_tape_monthly_v1.yaml  minimal_default_only.yaml
rules/: exit-code-range.yml  no-hashmap-in-output.yml  witness-must-append.yml
schemas/: assess.v0.schema.json  policy.v0.schema.json
scripts/: ubs_gate.sh
src/: lib.rs  main.rs
src/bundle/: artifact.rs  derive.rs  mod.rs
src/cli/: args.rs  exit.rs  mod.rs
src/evaluate/: matcher.rs  mod.rs
src/output/: human.rs  json.rs  mod.rs
src/policy/: loader.rs  mod.rs  schema.rs  validate.rs
src/refusal/: codes.rs  mod.rs  payload.rs
src/witness/: ledger.rs  mod.rs  query.rs  record.rs
tests/: bundle_construct.rs  cli_shell.rs  determinism.rs  e2e_pipeline.rs  evaluate_rules.rs  golden_rules.rs  output_schema.rs  pack_compat.rs  policy_load.rs  policy_loader.rs  refusal_suite.rs  witness_suite.rs
tests/support/: mod.rs
