[package]
name = "assess"
version = "0.1.0"
edition = "2024"
authors = ["CMD+RVL <engineering@cmdrvl.com>"]
description = "Deterministic decision classification over a spine evidence bundle"
repository = "https://github.com/cmdrvl/assess"
readme = "README.md"
keywords = ["assess", "policy", "cli", "validation", "decision"]
categories = ["command-line-utilities"]

[[bin]]
name = "assess"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
